src/main/gen/org/jetbrains/lama/parser/LamaParser.java
// This is a generated file. Not intended for manual editing.
package org.jetbrains.lama.parser;

import com.intellij.lang.PsiBuilder;
import com.intellij.lang.PsiBuilder.Marker;
import static org.jetbrains.lama.parser.LamaElementTypes.*;
import static org.jetbrains.lama.parser.LamaParserUtil.*;
import com.intellij.psi.tree.IElementType;
import com.intellij.lang.ASTNode;
import com.intellij.psi.tree.TokenSet;
import com.intellij.lang.PsiParser;
import com.intellij.lang.LightPsiParser;

@SuppressWarnings({"SimplifiableIfStatement", "UnusedAssignment"})
public class LamaParser implements PsiParser, LightPsiParser {

  public ASTNode parse(IElementType t, PsiBuilder b) {
    parseLight(t, b);
    return b.getTreeBuilt();
  }

  public void parseLight(IElementType t, PsiBuilder b) {
    boolean r;
    b = adapt_builder_(t, b, this, EXTENDS_SETS_);
    Marker m = enter_section_(b, 0, _COLLAPSE_, null);
    r = parse_root_(t, b);
    exit_section_(b, 0, m, t, r, true, TRUE_CONDITION);
  }

  protected boolean parse_root_(IElementType t, PsiBuilder b) {
    return parse_root_(t, b, 0);
  }

  static boolean parse_root_(IElementType t, PsiBuilder b, int l) {
    return root(b, l + 1);
  }

  public static final TokenSet[] EXTENDS_SETS_ = new TokenSet[] {
    create_token_set_(LAMA_SYNTAX_PRIMARY_ARRAY, LAMA_SYNTAX_PRIMARY_CALL, LAMA_SYNTAX_PRIMARY_EXPRESSION_FROM, LAMA_SYNTAX_PRIMARY_PARENTHESIZED),
    create_token_set_(LAMA_ARRAY_PATTERN, LAMA_LIST_PATTERN, LAMA_PATTERN, LAMA_SHARP_PATTERN,
      LAMA_S_OR_AT_PATTERN, LAMA_WILDCARD_PATTERN),
    create_token_set_(LAMA_AND_OPERATOR, LAMA_ASSIGNMENT_OPERATOR, LAMA_COMPARE_OPERATOR, LAMA_DOT_OPERATOR,
      LAMA_INFIX_OPERATOR, LAMA_LIST_CONS_OPERATOR, LAMA_MUL_DIV_MOD_OPERATOR, LAMA_OR_OPERATOR,
      LAMA_PLUS_MINUS_OPERATOR),
    create_token_set_(LAMA_ARRAY_EXPRESSION, LAMA_ASSIGNMENT_EXPRESSION, LAMA_BOOLEAN_LITERAL, LAMA_CASE_STATEMENT,
      LAMA_CHAR_LITERAL, LAMA_DO_STATEMENT, LAMA_ETA_EXPRESSION, LAMA_EXPRESSION,
      LAMA_FOR_STATEMENT, LAMA_FUNCTION_EXPRESSION, LAMA_IDENTIFIER_EXPRESSION, LAMA_IF_STATEMENT,
      LAMA_IMPORT_STATEMENT, LAMA_INFIX_EXPRESSION, LAMA_LAZY_EXPRESSION, LAMA_LIST_EXPRESSION,
      LAMA_NUMERIC_LITERAL, LAMA_OPERATOR_EXPRESSION, LAMA_PARENTHESIZED_EXPRESSION, LAMA_SKIP_EXPRESSION,
      LAMA_STRING_LITERAL, LAMA_SUBSCRIPTION_EXPRESSION, LAMA_SYNTAX_EXPRESSION, LAMA_S_OR_CALL_EXPRESSION,
      LAMA_WHILE_STATEMENT),
  };

  /* ********************************************************** */
  // "&&"
  public static boolean and_operator(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "and_operator")) return false;
    if (!nextTokenIs(b, LAMA_AND)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, LAMA_AND);
    exit_section_(b, m, LAMA_AND_OPERATOR, r);
    return r;
  }

  /* ********************************************************** */
  // "|" case_branch_impl
  public static boolean another_case_branch(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "another_case_branch")) return false;
    if (!nextTokenIs(b, LAMA_CASE_OR)) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, LAMA_CASE_BRANCH, null);
    r = consumeToken(b, LAMA_CASE_OR);
    p = r; // pin = 1
    r = r && case_branch_impl(b, l + 1);
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  /* ********************************************************** */
  // predefined_operator | infix_operator
  static boolean any_operator(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "any_operator")) return false;
    boolean r;
    r = predefined_operator(b, l + 1);
    if (!r) r = infix_operator(b, l + 1);
    return r;
  }

  /* ********************************************************** */
  // "(" [ expression_series_list ] ")"
  public static boolean argument_list(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "argument_list")) return false;
    if (!nextTokenIs(b, LAMA_LPAR)) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, LAMA_ARGUMENT_LIST, null);
    r = consumeToken(b, LAMA_LPAR);
    p = r; // pin = 1
    r = r && report_error_(b, argument_list_1(b, l + 1));
    r = p && consumeToken(b, LAMA_RPAR) && r;
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  // [ expression_series_list ]
  private static boolean argument_list_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "argument_list_1")) return false;
    expression_series_list(b, l + 1);
    return true;
  }

  /* ********************************************************** */
  // "[" [ pattern_list ] "]"
  public static boolean array_pattern(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "array_pattern")) return false;
    if (!nextTokenIs(b, LAMA_LBRACKET)) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, LAMA_ARRAY_PATTERN, null);
    r = consumeToken(b, LAMA_LBRACKET);
    p = r; // pin = 1
    r = r && report_error_(b, array_pattern_1(b, l + 1));
    r = p && consumeToken(b, LAMA_RBRACKET) && r;
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  // [ pattern_list ]
  private static boolean array_pattern_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "array_pattern_1")) return false;
    pattern_list(b, l + 1);
    return true;
  }

  /* ********************************************************** */
  // ":="
  public static boolean assignment_operator(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "assignment_operator")) return false;
    if (!nextTokenIs(b, LAMA_ASSIGN)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, LAMA_ASSIGN);
    exit_section_(b, m, LAMA_ASSIGNMENT_OPERATOR, r);
    return r;
  }

  /* ********************************************************** */
  // "@" pattern
  static boolean at_pattern_suffix(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "at_pattern_suffix")) return false;
    if (!nextTokenIs(b, LAMA_AT_SIGN)) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_);
    r = consumeToken(b, LAMA_AT_SIGN);
    p = r; // pin = 1
    r = r && pattern(b, l + 1);
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  /* ********************************************************** */
  // case_branch_impl
  public static boolean case_branch(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "case_branch")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, LAMA_CASE_BRANCH, "<case branch>");
    r = case_branch_impl(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // pattern "->" case_branch_scope
  static boolean case_branch_impl(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "case_branch_impl")) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_);
    r = pattern(b, l + 1);
    r = r && consumeToken(b, LAMA_ARROW);
    p = r; // pin = 2
    r = r && case_branch_scope(b, l + 1);
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  /* ********************************************************** */
  // !("|" | esac)
  static boolean case_branch_recover_rule(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "case_branch_recover_rule")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NOT_);
    r = !case_branch_recover_rule_0(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // "|" | esac
  private static boolean case_branch_recover_rule_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "case_branch_recover_rule_0")) return false;
    boolean r;
    r = consumeToken(b, LAMA_CASE_OR);
    if (!r) r = consumeToken(b, LAMA_ESAC);
    return r;
  }

  /* ********************************************************** */
  // non_empty_scope?
  static boolean case_branch_scope(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "case_branch_scope")) return false;
    Marker m = enter_section_(b, l, _NONE_);
    non_empty_scope(b, l + 1);
    exit_section_(b, l, m, true, false, LamaParser::case_branch_recover_rule);
    return true;
  }

  /* ********************************************************** */
  // "==" | "!=" | "<=" | "<" | ">=" | ">"
  public static boolean compare_operator(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "compare_operator")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, LAMA_COMPARE_OPERATOR, "<compare operator>");
    r = consumeToken(b, LAMA_EQEQ);
    if (!r) r = consumeToken(b, LAMA_NEQ);
    if (!r) r = consumeToken(b, LAMA_LEQ);
    if (!r) r = consumeToken(b, LAMA_LE);
    if (!r) r = consumeToken(b, LAMA_GEQ);
    if (!r) r = consumeToken(b, LAMA_GE);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // variable_definition_series | function_definition | infix_operator_definition
  static boolean definition(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "definition")) return false;
    boolean r;
    r = variable_definition_series(b, l + 1);
    if (!r) r = function_definition(b, l + 1);
    if (!r) r = infix_operator_definition(b, l + 1);
    return r;
  }

  /* ********************************************************** */
  // scope
  static boolean do_scope(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "do_scope")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_);
    r = scope(b, l + 1);
    exit_section_(b, l, m, r, false, LamaParser::do_scope_recover_rule);
    return r;
  }

  /* ********************************************************** */
  // !od
  static boolean do_scope_recover_rule(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "do_scope_recover_rule")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NOT_);
    r = !consumeToken(b, LAMA_OD);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // strict_scope
  static boolean do_while_scope(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "do_while_scope")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_);
    r = strict_scope(b, l + 1);
    exit_section_(b, l, m, r, false, LamaParser::do_while_scope_recover_rule);
    return r;
  }

  /* ********************************************************** */
  // !while
  static boolean do_while_scope_recover_rule(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "do_while_scope_recover_rule")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NOT_);
    r = !consumeToken(b, LAMA_WHILE);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // "."
  public static boolean dot_operator(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "dot_operator")) return false;
    if (!nextTokenIs(b, LAMA_DOT)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, LAMA_DOT);
    exit_section_(b, m, LAMA_DOT_OPERATOR, r);
    return r;
  }

  /* ********************************************************** */
  // elif expression_series then then_scope
  public static boolean elif_branch(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "elif_branch")) return false;
    if (!nextTokenIs(b, LAMA_ELIF)) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, LAMA_IF_BRANCH, null);
    r = consumeToken(b, LAMA_ELIF);
    p = r; // pin = 1
    r = r && report_error_(b, expression_series(b, l + 1));
    r = p && report_error_(b, consumeToken(b, LAMA_THEN)) && r;
    r = p && then_scope(b, l + 1) && r;
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  /* ********************************************************** */
  // else else_scope
  public static boolean else_branch(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "else_branch")) return false;
    if (!nextTokenIs(b, LAMA_ELSE)) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, LAMA_IF_BRANCH, null);
    r = consumeToken(b, LAMA_ELSE);
    p = r; // pin = 1
    r = r && else_scope(b, l + 1);
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  /* ********************************************************** */
  // !fi
  static boolean else_expression_scope_recover_rule(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "else_expression_scope_recover_rule")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NOT_);
    r = !consumeToken(b, LAMA_FI);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // non_empty_scope?
  static boolean else_scope(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "else_scope")) return false;
    Marker m = enter_section_(b, l, _NONE_);
    non_empty_scope(b, l + 1);
    exit_section_(b, l, m, true, false, LamaParser::else_expression_scope_recover_rule);
    return true;
  }

  /* ********************************************************** */
  // expression        (";"? expression)*
  public static boolean expression_series(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "expression_series")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, LAMA_EXPRESSION_SERIES, "<expression series>");
    r = expression(b, l + 1, -1);
    r = r && expression_series_1(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // (";"? expression)*
  private static boolean expression_series_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "expression_series_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!expression_series_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "expression_series_1", c)) break;
    }
    return true;
  }

  // ";"? expression
  private static boolean expression_series_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "expression_series_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = expression_series_1_0_0(b, l + 1);
    r = r && expression(b, l + 1, -1);
    exit_section_(b, m, null, r);
    return r;
  }

  // ";"?
  private static boolean expression_series_1_0_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "expression_series_1_0_0")) return false;
    consumeToken(b, LAMA_SEMI);
    return true;
  }

  /* ********************************************************** */
  // expression_series (","  expression_series)*
  static boolean expression_series_list(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "expression_series_list")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = expression_series(b, l + 1);
    r = r && expression_series_list_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // (","  expression_series)*
  private static boolean expression_series_list_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "expression_series_list_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!expression_series_list_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "expression_series_list_1", c)) break;
    }
    return true;
  }

  // ","  expression_series
  private static boolean expression_series_list_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "expression_series_list_1_0")) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_);
    r = consumeToken(b, LAMA_COMMA);
    p = r; // pin = ","
    r = r && expression_series(b, l + 1);
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  /* ********************************************************** */
  // scope
  static boolean for_scope(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "for_scope")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_);
    r = scope(b, l + 1);
    exit_section_(b, l, m, r, false, LamaParser::for_scope_recover_rule);
    return r;
  }

  /* ********************************************************** */
  // !("," | do)
  static boolean for_scope_recover_rule(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "for_scope_recover_rule")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NOT_);
    r = !for_scope_recover_rule_0(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // "," | do
  private static boolean for_scope_recover_rule_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "for_scope_recover_rule_0")) return false;
    boolean r;
    r = consumeToken(b, LAMA_COMMA);
    if (!r) r = consumeToken(b, LAMA_DO);
    return r;
  }

  /* ********************************************************** */
  // "{" function_body_scope "}"
  public static boolean function_body(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "function_body")) return false;
    if (!nextTokenIs(b, LAMA_LBRACE)) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, LAMA_FUNCTION_BODY, null);
    r = consumeToken(b, LAMA_LBRACE);
    p = r; // pin = 1
    r = r && report_error_(b, function_body_scope(b, l + 1));
    r = p && consumeToken(b, LAMA_RBRACE) && r;
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  /* ********************************************************** */
  // scope
  static boolean function_body_scope(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "function_body_scope")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_);
    r = scope(b, l + 1);
    exit_section_(b, l, m, r, false, LamaParser::function_body_scope_recover_rule);
    return r;
  }

  /* ********************************************************** */
  // !"}"
  static boolean function_body_scope_recover_rule(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "function_body_scope_recover_rule")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NOT_);
    r = !consumeToken(b, LAMA_RBRACE);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // [ public ] fun identifier_expression parameter_list function_body
  public static boolean function_definition(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "function_definition")) return false;
    if (!nextTokenIs(b, "<function definition>", LAMA_FUN, LAMA_PUBLIC)) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, LAMA_FUNCTION_DEFINITION, "<function definition>");
    r = function_definition_0(b, l + 1);
    r = r && consumeToken(b, LAMA_FUN);
    r = r && identifier_expression(b, l + 1);
    p = r; // pin = 3
    r = r && report_error_(b, parameter_list(b, l + 1));
    r = p && function_body(b, l + 1) && r;
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  // [ public ]
  private static boolean function_definition_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "function_definition_0")) return false;
    consumeToken(b, LAMA_PUBLIC);
    return true;
  }
